# opsCopilot

./: .env.example  .gitignore  README.md  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 8d48fdaf53c7_init.py  9f77967a7f0e_init.py  a2e04119ead3_init.py
backend/app/: main.py
backend/app/api/: deps.py
backend/app/api/routers/: auth.py  chat.py  documents.py  eval.py  feedback.py  health.py
backend/app/core/: config.py  errors.py  logging.py  rate_limit.py  security.py
backend/app/db/: session.py
backend/app/models/: chunk.py  document.py  feedback.py  query_log.py  user.py
backend/app/schemas/: auth.py  chat.py  documents.py  feedback.py
backend/app/services/: chunking.py  embeddings.py  evaluation.py  ingestion.py  llm.py  retrieval.py  storage.py
backend/app/utils/: hashing.py  timing.py
backend/app/workers/: ingestion_tasks.py
backend/tests/: test_api_smoke.py
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/(app)/chat/: page.tsx
frontend/src/app/(app)/documents/: page.tsx
frontend/src/app/(app)/settings/: page.tsx
frontend/src/app/(app)/upload/: page.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/components/: AuthGuard.tsx  ChatBox.tsx  CitationList.tsx  DocumentTable.tsx  FeedbackButtons.tsx  Navbar.tsx  Toast.tsx  UploadDropzone.tsx
frontend/src/lib/: api.ts  auth.ts  types.ts
(+1 files in other folders)
